--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,5 +8,12 @@ ordered-float = "3"
 parse_int = "0.6"
 thiserror = "1"
 
-clap = { version = "3.2.6", features = ["derive"] }
-image = { version = "0.24", default-features = false, features = ["png"] }
+clap = { version = "3.2.6", features = ["derive"], optional = true }
+image = { version = "0.24", default-features = false, features = ["png"], optional = true}
+
+[features]
+cli = ["clap", "image"]
+
+[[bin]]
+name = "cli"
+required-features = ["cli"]
