--- a/demo/Cargo.toml
+++ b/demo/Cargo.toml
@@ -7,6 +7,8 @@ edition = "2021"
 
 [dependencies]
 jitfive = { path = "../jitfive" }
+
 clap = { version = "3.2.6", features = ["derive"] }
 image = { version = "0.24", default-features = false, features = ["png"] }
+inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm14-0"] }
 piet-gpu-hal = { git = "https://github.com/linebender/piet-gpu" }
