Got JIT with conditionals working, albeit slowly

--- a/demo/Cargo.toml
+++ b/demo/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 jitfive = { path = "../jitfive" }
+env_logger = "0.9"
 
 clap = { version = "3.2.6", features = ["derive"] }
 image = { version = "0.24", default-features = false, features = ["png"] }
