--- a/jitfive/Cargo.toml
+++ b/jitfive/Cargo.toml
@@ -6,5 +6,7 @@ edition = "2021"
 [dependencies]
 inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm14-0"] }
 log = "0.4"
+num-derive = "0.3"
+num-traits = "0.2"
 ordered-float = "3"
 thiserror = "1"
