Start working on dynasm backend

--- a/jitfive/Cargo.toml
+++ b/jitfive/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+dynasmrt = "1.2.3"
 inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm14-0"] }
 log = "0.4"
 num-derive = "0.3"
