--- a/demo/Cargo.toml
+++ b/demo/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-jitfive = { path = "../jitfive" }
+fidget = { path = "../fidget" }
 
 clap = { version = "3.2.6", features = ["derive"] }
 env_logger = "0.9"
