--- a/fidget/Cargo.toml
+++ b/fidget/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 [dependencies]
 arrayvec = "0.7"
 dynasmrt = "1.2.3"
+itertools = "0.10.4"
 log = "0.4"
 num-derive = "0.3"
 num-traits = "0.2"
