--- a/fidget/Cargo.toml
+++ b/fidget/Cargo.toml
@@ -3,12 +3,9 @@ name = "fidget"
 version = "0.1.0"
 edition = "2021"
 
+# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+
 [dependencies]
-arrayvec = "0.7"
-dynasmrt = "1.2.3"
-log = "0.4"
-num-derive = "0.3"
-num-traits = "0.2"
-ordered-float = "3"
-rhai = "1.10"
-thiserror = "1"
+fidget-core = { path = "../fidget-core" }
+fidget-render = { path = "../fidget-render" }
+fidget-rhai = { path = "../fidget-rhai" }
