--- a/demo/Cargo.toml
+++ b/demo/Cargo.toml
@@ -12,3 +12,4 @@ clap = { version = "3.2.6", features = ["derive"] }
 env_logger = "0.9"
 image = { version = "0.24", default-features = false, features = ["png"] }
 log = "0.4"
+nalgebra = "0.31"
