Move JIT into separate package

--- a/fidget/Cargo.toml
+++ b/fidget/Cargo.toml
@@ -7,5 +7,6 @@ edition = "2021"
 
 [dependencies]
 fidget-core = { path = "../fidget-core" }
+fidget-jit = { path = "../fidget-jit" }
 fidget-render = { path = "../fidget-render" }
 fidget-rhai = { path = "../fidget-rhai" }
