--- a/demo/Cargo.toml
+++ b/demo/Cargo.toml
@@ -3,10 +3,8 @@ name = "demo"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
-fidget = { path = "../fidget" }
+fidget = { path = "../fidget", default-features = false, features = ["render", "jit"] }
 
 clap = { version = "3.2.6", features = ["derive"] }
 env_logger = "0.9"
