--- a/fidget/Cargo.toml
+++ b/fidget/Cargo.toml
@@ -3,10 +3,30 @@ name = "fidget"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
-fidget-core = { path = "../fidget-core" }
-fidget-jit = { path = "../fidget-jit" }
-fidget-render = { path = "../fidget-render" }
-fidget-rhai = { path = "../fidget-rhai" }
+arrayvec = "0.7"
+num-derive = "0.3"
+num-traits = "0.2"
+ordered-float = "3"
+thiserror = "1"
+
+# JIT
+dynasmrt = { version = "1.2.3", optional = true }
+libc = { version = "0.2", optional = true }
+
+# Rhai
+rhai = { version = "1.10", optional = true }
+
+# Render
+nalgebra = { version = "0.31", optional = true }
+
+[features]
+default = ["jit", "rhai", "render"]
+
+jit = ["dynasmrt", "libc"]
+rhai = ["dep:rhai"]
+render = ["nalgebra"]
+
+# Enable `eval-tests` if you're writing your own objects which implement the
+# `[Point|Interval|FloatSlice|Grad]EvalT` trait(s) and want to unit test them
+eval-tests = []
