--- a/fidget/Cargo.toml
+++ b/fidget/Cargo.toml
@@ -2,6 +2,10 @@
 name = "fidget"
 version = "0.1.0"
 edition = "2021"
+license = "MPL-2.0"
+repository = "https://github.com/mkeeter/fidget"
+description = "Infrastructure for complex closed-form implicit surfaces"
+authors = ["Matt Keeter <matt.j.keeter@gmail.com"]
 
 [dependencies]
 arrayvec = "0.7"
