--- a/fidget/Cargo.toml
+++ b/fidget/Cargo.toml
@@ -25,6 +25,8 @@ rhai = { version = "1.10", optional = true }
 nalgebra = { version = "0.31", optional = true }
 
 [features]
+# Ideally, we'd disable the `jit` feature on unsupported platforms; alas, that
+# is not possible (https://github.com/rust-lang/cargo/issues/1197)
 default = ["jit", "rhai", "render"]
 
 jit = ["dynasmrt", "libc"]
