--- a/viewer/Cargo.toml
+++ b/viewer/Cargo.toml
@@ -14,4 +14,8 @@ nalgebra = "0.31"
 notify = "5.0"
 rhai = "1.10"
 
-fidget = { path = "../fidget" }
+fidget = { path = "../fidget", default-features = false, features = ["rhai", "render"] }
+
+[features]
+default = ["jit"]
+jit = ["fidget/jit"]
