--- a/demo/Cargo.toml
+++ b/demo/Cargo.toml
@@ -4,10 +4,15 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-fidget = { path = "../fidget", default-features = false, features = ["render", "jit"] }
+fidget = { path = "../fidget", default-features = false, features = ["render"] }
 
+anyhow = "1"
 clap = { version = "3.2.6", features = ["derive"] }
 env_logger = "0.9"
 image = { version = "0.24", default-features = false, features = ["png"] }
 log = "0.4"
 nalgebra = "0.31"
+
+[features]
+jit = ["fidget/jit"]
+default = ["jit"]
