--- a/fidget/Cargo.toml
+++ b/fidget/Cargo.toml
@@ -30,10 +30,11 @@ nalgebra = { version = "0.31", optional = true }
 default = ["jit", "rhai", "render"]
 
 ## Enables fast evaluation via a JIT compiler.  This is exposed in the
-## [`fidget::jit`](crate::jit) module, and is supported on macOS + AArch64 and
-## Linux + x86.  There's no way to disable the feature based on platform
-## ([Cargo issue](https://github.com/rust-lang/cargo/issues/1197)), so users
-## will have to disable it manually via `default-features = false`.
+## [`fidget::jit`](crate::jit) module, and is supported on
+## `aarch64-apple-darwin` and `x86_64-unknown-linux-*` (requires AVX
+## instructions on x86).  There's no way to disable the feature on other
+## platforms ([Cargo issue](https://github.com/rust-lang/cargo/issues/1197));
+## users will have to disable it manually via `default-features = false`.
 jit = ["dep:dynasmrt", "dep:libc"]
 
 ## Enable [Rhai](https://rhai.rs/) bindings, in the
@@ -51,4 +52,4 @@ eval-tests = []
 ## On Linux, this feature uses `mprotect` to prevent JIT buffers from being both
 ## writable and executable at the same time.  This is best practice from a
 ## security perspective, but incurs a 25% slowdown.
-rxw = []
+write-xor-execute = []
