--- a/fidget/Cargo.toml
+++ b/fidget/Cargo.toml
@@ -14,6 +14,7 @@ document-features = "0.2"
 num-derive = "0.3"
 num-traits = "0.2"
 ordered-float = "3"
+static_assertions = "1"
 thiserror = "1"
 
 # JIT
