--- a/fidget/Cargo.toml
+++ b/fidget/Cargo.toml
@@ -27,6 +27,9 @@ rhai = { version = "1.10", optional = true, features = ["sync"] }
 # Render
 nalgebra = { version = "0.31", optional = true }
 
+# Meshing
+crossbeam-deque = { version = "0.8", optional = true }
+
 [features]
 default = ["jit", "rhai", "render", "mesh"]
 
@@ -46,7 +49,7 @@ rhai = ["dep:rhai"]
 render = ["dep:nalgebra"]
 
 ## Enable 3D meshing, in the [`fidget::mesh`](crate::mesh) module
-mesh = ["dep:nalgebra"]
+mesh = ["dep:nalgebra", "dep:crossbeam-deque"]
 
 ## Enable `eval-tests` if you're writing your own evaluator family and want to
 ## unit-test it.  When enabled, the crate exports a set of macros to test each
