--- a/fidget/Cargo.toml
+++ b/fidget/Cargo.toml
@@ -67,3 +67,7 @@ criterion = { version = "0.3", features = ["html_reports"] }
 [[bench]]
 name = "render"
 harness = false
+
+[[bench]]
+name = "mesh"
+harness = false
