--- a/fidget/Cargo.toml
+++ b/fidget/Cargo.toml
@@ -13,6 +13,7 @@ arrayvec = "0.7"
 document-features = "0.2"
 num-derive = "0.3"
 num-traits = "0.2"
+once_cell = "1"
 ordered-float = "3"
 static_assertions = "1"
 thiserror = "1"
