got things compiling again, albeit without tests

--- a/fidget/Cargo.toml
+++ b/fidget/Cargo.toml
@@ -33,7 +33,8 @@ nalgebra = { version = "0.31", optional = true }
 crossbeam-deque = { version = "0.8", optional = true }
 
 [features]
-default = ["jit", "rhai", "render", "mesh"]
+#default = ["jit", "rhai", "render", "mesh"]
+default = []
 
 ## Enables fast evaluation via a JIT compiler.  This is exposed in the
 ## [`fidget::jit`](crate::jit) module, and is supported on
