--- a/fidget/Cargo.toml
+++ b/fidget/Cargo.toml
@@ -66,6 +66,7 @@ write-xor-execute = []
 
 [dev-dependencies]
 criterion = { version = "0.3", features = ["html_reports"] }
+proptest = "1.0.0"
 
 [[bench]]
 name = "render"
