--- a/fidget/Cargo.toml
+++ b/fidget/Cargo.toml
@@ -67,6 +67,7 @@ write-xor-execute = []
 
 [dev-dependencies]
 criterion = { version = "0.5", features = ["html_reports"] }
+lazy_static = "1.4.0"
 
 [[bench]]
 name = "render"
