--- a/fidget/Cargo.toml
+++ b/fidget/Cargo.toml
@@ -10,6 +10,7 @@ readme = "../README.md"
 
 [dependencies]
 arrayvec = "0.7"
+bimap = "0.6.3"
 document-features = "0.2"
 ieee754 = "0.2"
 num-derive = "0.3"
