--- a/demo/Cargo.toml
+++ b/demo/Cargo.toml
@@ -12,6 +12,7 @@ env_logger = "0.9"
 image = { version = "0.24", default-features = false, features = ["png"] }
 log = "0.4"
 nalgebra = "0.31"
+workspace-hack = { version = "0.1", path = "../workspace-hack" }
 
 [features]
 jit = ["fidget/jit"]
