--- a/workspace-hack/Cargo.toml
+++ b/workspace-hack/Cargo.toml
@@ -16,8 +16,9 @@ publish = false
 [dependencies]
 ahash = { version = "0.8", default-features = false, features = ["compile-time-rng", "no-rng", "runtime-rng", "std"] }
 bytemuck = { version = "1", default-features = false, features = ["derive", "extern_crate_alloc"] }
+clap = { version = "4", features = ["derive"] }
+clap_builder = { version = "4", default-features = false, features = ["color", "help", "std", "suggestions", "usage"] }
 crossbeam-utils = { version = "0.8" }
-memchr = { version = "2", default-features = false, features = ["std"] }
 once_cell = { version = "1" }
 regex = { version = "1", default-features = false, features = ["perf", "std"] }
 regex-automata = { version = "0.4", default-features = false, features = ["dfa-onepass", "hybrid", "meta", "nfa-backtrack", "perf-inline", "perf-literal"] }
