--- a/fidget/Cargo.toml
+++ b/fidget/Cargo.toml
@@ -13,11 +13,13 @@ arrayvec = "0.7"
 bimap = "0.6.3"
 document-features = "0.2"
 ieee754 = "0.2"
+nalgebra = "0.31"
 num-derive = "0.3"
 num-traits = "0.2"
 ordered-float = "3"
 static_assertions = "1"
 thiserror = "1"
+workspace-hack = { version = "0.1", path = "../workspace-hack" }
 
 # JIT
 dynasmrt = { version = "2.0", optional = true }
@@ -26,12 +28,8 @@ libc = { version = "0.2", optional = true }
 # Rhai
 rhai = { version = "1.17", optional = true, features = ["sync"] }
 
-# Render
-nalgebra = { version = "0.31" }
-
 # Meshing
 crossbeam-deque = { version = "0.8", optional = true }
-workspace-hack = { version = "0.1", path = "../workspace-hack" }
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 getrandom = { version = "0.2", features = ["js"] }
