--- a/.github/workflows/check-aarch64.yml
+++ b/.github/workflows/check-aarch64.yml
@@ -15,6 +15,7 @@ jobs:
       matrix:
         target: [
           "aarch64-apple-darwin",
+          "aarch64-pc-windows-msvc",
           "aarch64-unknown-linux-gnu",
         ]
     runs-on: macos-14
@@ -25,4 +26,3 @@ jobs:
       run: rustup target add ${{ matrix.target }}
     - name: Check
       run: cargo check --target=${{ matrix.target }} --all-targets --verbose
-
