--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,8 +13,9 @@ jobs:
   test:
     strategy:
       matrix:
-        os: ["ubuntu-latest", "macos-14"]
+        os: ["ubuntu-latest", "macos-14", "windows-latest"]
     runs-on: ${{ matrix.os }}
+    timeout-minutes: 15
     steps:
     - uses: actions/checkout@v4
     - uses: Swatinem/rust-cache@v2
