--- a/workspace-hack/Cargo.toml
+++ b/workspace-hack/Cargo.toml
@@ -31,14 +31,16 @@ syn-dff4ba8e3ae991db = { package = "syn", version = "1", features = ["extra-trai
 syn-f595c2ba2a3f28df = { package = "syn", version = "2", features = ["extra-traits", "full"] }
 
 [target.x86_64-unknown-linux-gnu.dependencies]
+ahash = { version = "0.8" }
 bitflags = { version = "2", default-features = false, features = ["std"] }
-bytemuck = { version = "1", default-features = false, features = ["aarch64_simd"] }
-libc = { version = "0.2", features = ["extra_traits"] }
+libc = { version = "0.2" }
 log = { version = "0.4", default-features = false, features = ["std"] }
+memchr = { version = "2" }
 
 [target.x86_64-unknown-linux-gnu.build-dependencies]
-libc = { version = "0.2", features = ["extra_traits"] }
+libc = { version = "0.2" }
 log = { version = "0.4", default-features = false, features = ["std"] }
+memchr = { version = "2" }
 
 [target.aarch64-apple-darwin.dependencies]
 libc = { version = "0.2" }
@@ -47,13 +49,15 @@ libc = { version = "0.2" }
 libc = { version = "0.2" }
 
 [target.aarch64-unknown-linux-gnu.dependencies]
+ahash = { version = "0.8" }
 bitflags = { version = "2", default-features = false, features = ["std"] }
-bytemuck = { version = "1", default-features = false, features = ["aarch64_simd"] }
-libc = { version = "0.2", features = ["extra_traits"] }
+libc = { version = "0.2" }
 log = { version = "0.4", default-features = false, features = ["std"] }
+memchr = { version = "2" }
 
 [target.aarch64-unknown-linux-gnu.build-dependencies]
-libc = { version = "0.2", features = ["extra_traits"] }
+libc = { version = "0.2" }
 log = { version = "0.4", default-features = false, features = ["std"] }
+memchr = { version = "2" }
 
 ### END HAKARI SECTION
