--- a/.github/workflows/wasm.yml
+++ b/.github/workflows/wasm.yml
@@ -17,4 +17,4 @@ jobs:
     - name: Install wasm target
       run: rustup target add wasm32-unknown-unknown
     - name: Check
-      run: cargo check --target=wasm32-unknown-unknown --release -pfidget --no-default-features --features="rhai,render,mesh"
+      run: cargo check --target=wasm32-unknown-unknown -pfidget --no-default-features --features="rhai,render,mesh"
