--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,4 +1,4 @@
-name: Build & Test
+name: Test native builds
 
 on:
   push:
@@ -10,7 +10,7 @@ env:
   CARGO_TERM_COLOR: always
 
 jobs:
-  build-and-test-native:
+  test:
     strategy:
       matrix:
         os: ["ubuntu-latest", "macos-14"]
@@ -18,9 +18,5 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     - uses: Swatinem/rust-cache@v2
-    - name: Check
-      run: cargo check --all-targets --verbose
-    - name: Build
-      run: cargo build --verbose --package fidget
     - name: Run tests
       run: cargo test --verbose --package fidget
