--- a/fidget-wasm-demo/Cargo.toml
+++ b/fidget-wasm-demo/Cargo.toml
@@ -7,5 +7,8 @@ edition = "2021"
 crate-type = ["cdylib"]
 
 [dependencies]
-fidget.path = "../fidget"
+fidget = {path = "../fidget", default-features = false, features = ["rhai", "mesh", "render"]}
 wasm-bindgen = "0.2.92"
+
+# Take advantage of feature unification to turn on wasm-bindgen here
+rhai = { version = "*", features = ["wasm-bindgen"] }
