--- a/fidget-wasm-demo/package.json
+++ b/fidget-wasm-demo/package.json
@@ -3,6 +3,9 @@
     "build": "webpack",
     "serve": "webpack serve"
   },
+  "dependencies": {
+    "codemirror": "6.0.1"
+  },
   "devDependencies": {
     "@wasm-tool/wasm-pack-plugin": "1.5.0",
     "html-webpack-plugin": "^5.3.2",
