--- a/fidget-wasm-demo/package.json
+++ b/fidget-wasm-demo/package.json
@@ -9,8 +9,10 @@
   "devDependencies": {
     "@wasm-tool/wasm-pack-plugin": "1.5.0",
     "html-webpack-plugin": "^5.3.2",
+    "wasm-pack": "^0.12.1",
     "webpack": "^5.49.0",
     "webpack-cli": "^4.7.2",
     "webpack-dev-server": "^4.15.1"
-  }
+  },
+  "private": true
 }
