--- a/fidget-wasm-demo/package.json
+++ b/fidget-wasm-demo/package.json
@@ -1,6 +1,6 @@
 {
   "scripts": {
-    "build": "webpack",
+    "build": "webpack --mode production",
     "serve": "webpack serve"
   },
   "dependencies": {
@@ -9,6 +9,7 @@
   "devDependencies": {
     "@wasm-tool/wasm-pack-plugin": "1.5.0",
     "html-webpack-plugin": "^5.3.2",
+    "prettier": "3.2.5",
     "wasm-pack": "^0.12.1",
     "webpack": "^5.49.0",
     "webpack-cli": "^4.7.2",
