--- a/fidget/Cargo.toml
+++ b/fidget/Cargo.toml
@@ -20,6 +20,7 @@ ordered-float = "3"
 static_assertions = "1"
 thiserror = "1"
 workspace-hack = { version = "0.1", path = "../workspace-hack" }
+serde = { version = "1.0", features = ["derive"] }
 
 # JIT
 dynasmrt = { version = "2.0", optional = true }
