--- a/wasm-demo/Cargo.toml
+++ b/wasm-demo/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 crate-type = ["cdylib"]
 
 [dependencies]
+bincode = "1.3.3"
 fidget = {path = "../fidget", default-features = false, features = ["rhai", "mesh", "render"]}
 wasm-bindgen = "0.2.92"
 nalgebra = "0.31"
