--- a/fidget/Cargo.toml
+++ b/fidget/Cargo.toml
@@ -17,10 +17,11 @@ nalgebra = "0.31"
 num-derive = "0.3"
 num-traits = "0.2"
 ordered-float = "3"
+rand = "0.8.5"
 static_assertions = "1"
 thiserror = "1"
 workspace-hack = { version = "0.1", path = "../workspace-hack" }
-serde = { version = "1.0", features = ["derive"] }
+serde = { version = "1.0", features = ["derive", "rc"] }
 
 # JIT
 dynasmrt = { version = "2.0", optional = true }
