--- a/fidget/Cargo.toml
+++ b/fidget/Cargo.toml
@@ -71,6 +71,7 @@ eval-tests = []
 
 [dev-dependencies]
 criterion = { version = "0.5", features = ["html_reports"] }
+approx = "0.5.1"
 
 [[bench]]
 name = "render"
