--- a/constraints/Cargo.toml
+++ b/constraints/Cargo.toml
@@ -5,18 +5,18 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0"
-clap = { version = "4.1.6", features = ["derive"] }
 eframe = { version = "0.27", default-features = false, features = [
     "default_fonts", # Embed the default egui fonts.
     "glow",          # Use the glow rendering backend. Alternative: "wgpu".
 ] }
-env_logger = "0.10.0"
 
 fidget = { path = "../fidget", default-features = false, features = ["solver"] }
 log = "0.4"
 nalgebra = "0.31"
 workspace-hack = { version = "0.1", path = "../workspace-hack" }
 
-[features]
-default = ["jit"]
-jit = ["fidget/jit"]
+[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
+env_logger = "0.10.0"
+
+[target.'cfg(target_arch = "wasm32")'.dependencies]
+wasm-bindgen-futures = "0.4"
