--- a/workspace-hack/Cargo.toml
+++ b/workspace-hack/Cargo.toml
@@ -26,6 +26,7 @@ once_cell = { version = "1" }
 regex = { version = "1", default-features = false, features = ["perf", "std"] }
 regex-automata = { version = "0.4", default-features = false, features = ["dfa-onepass", "hybrid", "meta", "nfa-backtrack", "perf-inline", "perf-literal"] }
 serde = { version = "1", features = ["alloc", "derive", "rc"] }
+smallvec = { version = "1", default-features = false, features = ["const_new", "union"] }
 
 [build-dependencies]
 getrandom = { version = "0.2", default-features = false, features = ["std"] }
