--- a/.github/workflows/constraints-demo.yml
+++ b/.github/workflows/constraints-demo.yml
@@ -24,5 +24,5 @@ jobs:
       run: |
         wget -qO- https://github.com/trunk-rs/trunk/releases/download/v0.20.2/trunk-x86_64-unknown-linux-gnu.tar.gz | tar -xzf-
     - name: Build wasm-demo
-      run: trunk build --release
+      run: ./trunk build --release
 
