--- a/demos/constraints/Cargo.toml
+++ b/demos/constraints/Cargo.toml
@@ -10,9 +10,9 @@ eframe = { version = "0.27", default-features = false, features = [
     "glow",          # Use the glow rendering backend. Alternative: "wgpu".
 ] }
 
-fidget = { path = "../fidget", default-features = false, features = ["solver"] }
+fidget = { path = "../../fidget", default-features = false, features = ["solver"] }
 log = "0.4"
-workspace-hack = { version = "0.1", path = "../workspace-hack" }
+workspace-hack = { version = "0.1", path = "../../workspace-hack" }
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
 env_logger = "0.10.0"
