--- a/.github/workflows/constraints-demo.yml
+++ b/.github/workflows/constraints-demo.yml
@@ -14,7 +14,7 @@ jobs:
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: ./constraints
+        working-directory: ./demos/constraints
     steps:
     - uses: actions/checkout@v4
     - uses: Swatinem/rust-cache@v2
