--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,3 +23,33 @@ opt-level = 1
 [profile.fast-test]
 inherits = "test"
 opt-level = 0
+
+[workspace.dependencies]
+anyhow = "1"
+arrayvec = "0.7"
+bimap = "0.6.3"
+bincode = "1.3.3"
+clap = { version = "4", features = ["derive"] }
+crossbeam-channel = "0.5"
+crossbeam-deque = "0.8"
+document-features = "0.2"
+dynasmrt = { version = "2.0" }
+eframe = { version = "0.27", default-features = false, features = [ "default_fonts", "glow"] }
+env_logger = "0.11.2"
+getrandom = { version = "0.2", features = ["js"] }
+ieee754 = "0.2"
+image = { version = "0.24", default-features = false, features = ["png"] }
+libc = "0.2"
+log = "0.4"
+nalgebra = "0.32"
+notify = "5.0"
+num-traits = "0.2"
+ordered-float = "3"
+rand = "0.8.5"
+rhai = { version = "1.17", features = ["sync"] }
+serde = { version = "1.0", features = ["derive", "rc"] }
+static_assertions = "1"
+thiserror = "1"
+wasm-bindgen = "0.2.92"
+wasm-bindgen-futures = "0.4"
+windows = { version = "0.54.0", features = ["Win32_Foundation", "Win32_System_Memory"] }
