--- a/demos/cli/Cargo.toml
+++ b/demos/cli/Cargo.toml
@@ -4,14 +4,14 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-fidget = { path = "../../fidget", default-features = false, features = ["render", "mesh"] }
+anyhow.workspace = true
+clap.workspace = true
+env_logger.workspace = true
+image.workspace = true
+log.workspace = true
+nalgebra.workspace = true
 
-anyhow = "1"
-clap = { version = "4", features = ["derive"] }
-env_logger = "0.11.2"
-image = { version = "0.24", default-features = false, features = ["png"] }
-log = "0.4"
-nalgebra = "0.32"
+fidget = { path = "../../fidget", default-features = false, features = ["render", "mesh"] }
 workspace-hack = { version = "0.1", path = "../../workspace-hack" }
 
 [features]
