--- a/demos/constraints/Cargo.toml
+++ b/demos/constraints/Cargo.toml
@@ -4,18 +4,15 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-anyhow = "1.0"
-eframe = { version = "0.27", default-features = false, features = [
-    "default_fonts", # Embed the default egui fonts.
-    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
-] }
+anyhow.workspace = true
+eframe.workspace = true
+log.workspace = true
 
 fidget = { path = "../../fidget", default-features = false, features = ["solver"] }
-log = "0.4"
 workspace-hack = { version = "0.1", path = "../../workspace-hack" }
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
-env_logger = "0.11.2"
+env_logger.workspace = true
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
-wasm-bindgen-futures = "0.4"
+wasm-bindgen-futures.workspace = true
