--- a/fidget/Cargo.toml
+++ b/fidget/Cargo.toml
@@ -9,35 +9,35 @@ authors = ["Matt Keeter <matt.j.keeter@gmail.com"]
 readme = "../README.md"
 
 [dependencies]
-arrayvec = "0.7"
-bimap = "0.6.3"
-document-features = "0.2"
-ieee754 = "0.2"
-nalgebra = "0.32"
-num-derive = "0.3"
-num-traits = "0.2"
-ordered-float = "3"
-rand = "0.8.5"
-static_assertions = "1"
-thiserror = "1"
+arrayvec.workspace = true
+bimap.workspace = true
+document-features.workspace = true
+ieee754.workspace = true
+nalgebra.workspace = true
+num-traits.workspace = true
+ordered-float.workspace = true
+rand.workspace = true
+static_assertions.workspace = true
+thiserror.workspace = true
+serde.workspace = true
+
 workspace-hack = { version = "0.1", path = "../workspace-hack" }
-serde = { version = "1.0", features = ["derive", "rc"] }
 
 # JIT
-dynasmrt = { version = "2.0", optional = true }
-libc = { version = "0.2", optional = true }
+dynasmrt = { workspace = true, optional = true }
+libc = { workspace = true, optional = true }
 
 # Rhai
-rhai = { version = "1.17", optional = true, features = ["sync"] }
+rhai = { workspace = true, optional = true }
 
 # Meshing
-crossbeam-deque = { version = "0.8", optional = true }
+crossbeam-deque = { workspace = true, optional = true }
 
 [target.'cfg(target_os = "windows")'.dependencies]
-windows = { version = "0.54.0", features = ["Win32_Foundation", "Win32_System_Memory"] }
+windows.workspace = true
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
-getrandom = { version = "0.2", features = ["js"] }
+getrandom.workspace = true
 
 [features]
 default = ["jit", "rhai", "render", "mesh", "solver"]
