--- a/demos/web-editor/package.json
+++ b/demos/web-editor/package.json
@@ -11,6 +11,7 @@
     "@wasm-tool/wasm-pack-plugin": "1.5.0",
     "html-webpack-plugin": "^5.3.2",
     "prettier": "3.2.5",
+    "raw-loader": "^4.0.2",
     "ts-loader": "^9.5.1",
     "typescript": "^5.4.5",
     "webpack": "^5.49.0",
