--- a/workspace-hack/Cargo.toml
+++ b/workspace-hack/Cargo.toml
@@ -33,8 +33,7 @@ getrandom = { version = "0.2", default-features = false, features = ["std"] }
 once_cell = { version = "1" }
 proc-macro2 = { version = "1" }
 quote = { version = "1" }
-syn-dff4ba8e3ae991db = { package = "syn", version = "1", features = ["extra-traits", "full"] }
-syn-f595c2ba2a3f28df = { package = "syn", version = "2", features = ["extra-traits", "full"] }
+syn = { version = "2", features = ["extra-traits", "full"] }
 
 [target.x86_64-unknown-linux-gnu.dependencies]
 ahash = { version = "0.8" }
