--- a/demos/web-editor/package.json
+++ b/demos/web-editor/package.json
@@ -5,11 +5,13 @@
     "format": "prettier . --write"
   },
   "dependencies": {
+    "@lezer/lr": "^1.0.0",
     "codemirror": "6.0.1"
   },
   "devDependencies": {
     "@wasm-tool/wasm-pack-plugin": "1.5.0",
     "html-webpack-plugin": "^5.3.2",
+    "lezer-loader": "^0.3.0",
     "prettier": "3.2.5",
     "raw-loader": "^4.0.2",
     "ts-loader": "^9.5.1",
