--- a/.github/workflows/wasm-demo.yml
+++ b/.github/workflows/wasm-demo.yml
@@ -14,7 +14,7 @@ jobs:
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: ./demos/web-editor
+        working-directory: ./demos/web-editor/web
     steps:
     - uses: actions/checkout@v4
     - uses: Swatinem/rust-cache@v2
