Fix web-editor crate path

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ members = [
     "demos/viewer",
     "workspace-hack",
 ]
-exclude = ["demos/web-editor"]
+exclude = ["demos/web-editor/crate"]
 
 [profile.release]
 debug = true
