--- a/demos/constraints/Cargo.toml
+++ b/demos/constraints/Cargo.toml
@@ -17,3 +17,8 @@ env_logger.workspace = true
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 wasm-bindgen-futures.workspace = true
+
+[[bin]]
+name = "constraints"
+test = false
+doctest = false
