--- a/demos/viewer/Cargo.toml
+++ b/demos/viewer/Cargo.toml
@@ -22,3 +22,8 @@ workspace-hack = { version = "0.1", path = "../../workspace-hack" }
 [features]
 default = ["jit"]
 jit = ["fidget/jit"]
+
+[[bin]]
+name = "fidget-viewer"
+test = false
+doctest = false
