--- a/fidget/Cargo.toml
+++ b/fidget/Cargo.toml
@@ -21,7 +21,9 @@ rand.workspace = true
 rayon.workspace = true
 serde.workspace = true
 static_assertions.workspace = true
+strum.workspace = true
 thiserror.workspace = true
+zerocopy.workspace = true
 
 rhai = { workspace = true, optional = true }
 
