--- a/Cargo.toml
+++ b/Cargo.toml
@@ -45,12 +45,16 @@ nalgebra = "0.33"
 notify = "7.0"
 num-traits = "0.2"
 ordered-float = "4"
+pollster = "0.4.0"
 rand = "0.8.5"
 rayon = "1.10"
 rhai = { version = "1.17", features = ["sync"] }
 serde = { version = "1.0", features = ["derive", "rc"] }
 static_assertions = "1"
+strum = { version = "0.26", features = ["derive"] }
 thiserror = "1"
 wasm-bindgen = "0.2.92"
 wasm-bindgen-futures = "0.4"
+wgpu = "23.0.0"
 windows = { version = "0.54.0", features = ["Win32_Foundation", "Win32_System_Memory"] }
+zerocopy = "0.8.8"
