Working on tiled renderer

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -57,4 +57,4 @@ wasm-bindgen = "0.2.92"
 wasm-bindgen-futures = "0.4"
 wgpu = "23.0.0"
 windows = { version = "0.54.0", features = ["Win32_Foundation", "Win32_System_Memory"] }
-zerocopy = "0.8.8"
+zerocopy = { version = "0.8.8", features = ["derive"] }
