Check Clippy in CI; forbid warnings

--- a/.github/workflows/check-wasm.yml
+++ b/.github/workflows/check-wasm.yml
@@ -8,6 +8,7 @@ on:
 
 env:
   CARGO_TERM_COLOR: always
+  RUSTFLAGS: -Dwarnings
 
 jobs:
   check:
@@ -26,3 +27,5 @@ jobs:
       # cargo check doesn't find MIR diagnostics, so we use cargo build instead
       # (https://github.com/rust-lang/rust/issues/49292)
       run: cargo build --target=${{ matrix.target }} -pfidget --no-default-features --features="rhai,render,mesh"
+    - name: Clippy
+      run: cargo clippy --target=${{ matrix.target }} -pfidget --no-default-features --features="rhai,render,mesh"
