deps: Update `eframe`, `image`. `notify`
This updates the constraints demo to work a bit better with egui
in the WebAssembly build.

--- a/demos/constraints/Cargo.toml
+++ b/demos/constraints/Cargo.toml
@@ -17,6 +17,7 @@ env_logger.workspace = true
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 wasm-bindgen-futures.workspace = true
+web-sys = "0.3.70"
 
 [[bin]]
 name = "constraints"
