--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,6 +37,7 @@ dynasmrt = { version = "2.0" }
 eframe = { version = "0.29", default-features = false, features = [ "default_fonts", "glow"] }
 env_logger = "0.11.2"
 getrandom = { version = "0.2", features = ["js"] }
+heck = "0.5"
 ieee754 = "0.2"
 image = { version = "0.25", default-features = false, features = ["png"] }
 libc = "0.2"
